# chaos-rng

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  demo.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  lint.yml  release.yml  tests.yml
benchmarks/: README.md  run_benchmarks.py
examples/: README.md  crypto_optional.py  numpy_integration.py  quick_start.py  reproducibility.py  validation_offline.py
src/chaos_rng/: __init__.py
src/chaos_rng/generators/: __init__.py  bit_extractors.py  numpy_compat.py  three_body.py
src/chaos_rng/integrators/: __init__.py  solvers.py
src/chaos_rng/security/: __init__.py  crypto_utils.py
src/chaos_rng/utils/: __init__.py  analysis.py  validation.py
tests/: __init__.py  conftest.py  test_bit_extractors.py  test_numpy_compat.py  test_three_body.py
